@@ -37,10 +37,6 @@ libsvf_flex_la_SOURCES = \
 
 AM_CFLAGS = $(WARNINGCFLAGS)
 
-libsvf_flex_la_CFLAGS = \
-	$(AM_CFLAGS) \
-	-Wno-error
-
 # additional dependencies
 # - *_flex files must be processed after their *_bison counterparts
 #   to ensure that *_bison.h is present
